# MediSprache

./: .gitattributes  .gitignore  README.md  docker-compose.gpu.yml  docker-compose.yml  setup.sh
backend/: .dockerignore  Dockerfile  main.py  pyproject.toml
backend/.adk/artifacts/users/user/sessions/18bf7021-80a7-4287-bc90-f9c3307fd5fe/artifacts/sample_01_bronchitis.mp3/versions/0/: metadata.json
backend/docs/: benchmark_whisper_models.md
backend/medisprache/: __init__.py  agent.py
backend/medisprache/.adk/: session.db
backend/medisprache/plugins/: __init__.py  ollama_bridge.py
backend/medisprache/prompts/: __init__.py  registry.py  schema_prompt.py
backend/medisprache/schemas/: __init__.py  base.py  clinical_summary.py  job.py  transcript.py
backend/medisprache/tests/integration/: test_transcribe_audio.py
backend/medisprache/tests/unit/: test_agent_provider.py  test_prompting.py  test_schemas.py  test_transcribe_audio.py
backend/medisprache/tools/: transcribe_audio.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
frontend/app/: globals.css  layout.js  page.js
frontend/app/api/history/: route.js
frontend/app/api/session/: route.js
frontend/app/api/transcribe/: route.js
