[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "soundfile>=0.12.0",
    "torch>=2.0.0",
    "transformers>=4.40.0",
    "google-adk>=1.26.0",
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.2",
    "torchaudio>=2.10.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
markers = [
    "integration: tests that hit the network or GPU and are slow",
]

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
]
